[package]
name = "map_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
csv = "1.3.0"
nanoid = "0.4.0"
thirtyfour = "0.31.0"
tokio = "1.32.0"
webdriver = "0.49.0"
